# rxx

./: .gitignore  CMakeLists.txt  README.md  hash-map-test  hash_map_test.cpp  rxx.hpp
cmake/: rxxConfig.cmake.in
cmake/Modules/: RxxCPackConfig.cmake  RxxTargetProperties.cmake  rxxCPackConfig.cmake
include/: rxx.hpp
include/rxx/: algorithm.hpp  attributes.hpp  bool.hpp  enum.hpp  f32.hpp  f64.hpp  i16.hpp  i32.hpp  i64.hpp  i8.hpp  invoke.hpp  io.hpp  isize.hpp  macros.hpp  match.hpp  option.hpp  result.hpp  rxx.hpp  slice.hpp  str.hpp  type_traits.hpp  u16.hpp  u32.hpp  u64.hpp  u8.hpp  unit.hpp  usize.hpp  utility.hpp  var.hpp  variant.hpp
include/rxx/alloc/: alloc.hpp
include/rxx/alloc/global/: def.hpp  global.hpp  impl.hpp
include/rxx/alloc/layout/: def.hpp  impl.hpp  layout.hpp
include/rxx/as/: as.hpp
include/rxx/bool/: bool.hpp  def.hpp
include/rxx/collections/hash_map/: def.hpp  hash_map.hpp  impl.hpp
include/rxx/core/: as.hpp  bool.hpp  core.hpp  lib.hpp  panic.hpp  result.hpp  slice.hpp  str.hpp  unit.hpp
include/rxx/core/alloc/layout/: def.hpp  layout.hpp
include/rxx/core/as/: as.hpp  def.hpp
include/rxx/core/bool/: bool.hpp  def.hpp
include/rxx/core/num/: f32.hpp  f64.hpp  i16.hpp  i32.hpp  i64.hpp  i8.hpp  isize.hpp  mod.hpp  num.hpp  u16.hpp  u32.hpp  u64.hpp  u8.hpp  usize.hpp
include/rxx/core/num/i32/: def.hpp  i32.hpp  impl.hpp
include/rxx/core/num/u8/: as.hpp  as_usize.hpp  def.hpp  impl.hpp  ptr_as_ptr_usize.hpp  ptr_ops_usize.hpp  u8.hpp
include/rxx/core/num/usize/: as.hpp  as_size_t.hpp  as_u8.hpp  def.hpp  impl.hpp  usize.hpp
include/rxx/core/option/: def.hpp  impl.hpp  mod.hpp  none.hpp  option.hpp  ptr.hpp
include/rxx/core/option/ref/: def.hpp  impl.hpp
include/rxx/core/panic/: def.hpp  impl.hpp
include/rxx/core/result/: def.hpp  err.hpp  impl.hpp  ok.hpp
include/rxx/core/slice/: def.hpp  impl.hpp
include/rxx/core/slice/const/: def.hpp  impl.hpp
include/rxx/core/str/: def.hpp  impl.hpp
include/rxx/core/str/const/: def.hpp  impl.hpp
include/rxx/enum/: def.hpp  enum.hpp  impl.hpp
include/rxx/f32/: def.hpp
include/rxx/f64/: def.hpp
include/rxx/i16/: def.hpp
include/rxx/i32/: def.hpp  i32.hpp  impl.hpp
include/rxx/i64/: def.hpp
include/rxx/io/: seek_from.hpp
include/rxx/option/: def.hpp  impl.hpp  none.hpp  option.hpp  proto.hpp
include/rxx/option/ref/: def.hpp  impl.hpp
include/rxx/panic/: def.hpp  impl.hpp  panic.hpp
include/rxx/result/: def.hpp  err.hpp  impl.hpp  ok.hpp  proto.hpp  result.hpp
include/rxx/rxx/: lib.hpp  macros.hpp  rxx.hpp
include/rxx/rxx/collections/hash_map/: def.hpp  hash_map.hpp  impl.hpp
include/rxx/slice/: def.hpp  impl.hpp  slice.hpp
include/rxx/slice/const/: def.hpp  impl.hpp
include/rxx/std/: macros.hpp
include/rxx/str/: def.hpp  impl.hpp  str.hpp
include/rxx/str/const/: def.hpp  impl.hpp
include/rxx/u16/: def.hpp
include/rxx/u32/: def.hpp
include/rxx/u64/: def.hpp  impl.hpp  u64.hpp
include/rxx/u8/: def.hpp  impl.hpp  u8.hpp
include/rxx/usize/: def.hpp  impl.hpp  usize.hpp
src/alloc/: global.cpp
src/collections/hash_map/: hash_map.cpp
tests/: CMakeLists.txt  main.cpp
tests/io/: CMakeLists.txt
tests/io/seek_from/: CMakeLists.txt  test.cpp
tests/result/: CMakeLists.txt  test.cpp
tests/slice/: CMakeLists.txt  test.cpp
tests/str/: CMakeLists.txt  test.cpp
tests/var/: CMakeLists.txt  test.cpp  var_test.cpp
